snippets/Nemerle.Statechart/Tests/testsuite/positive/join_transition_by_completion2.n
using Nemerle;
using Nemerle.Collections;
using Nemerle.Text;
using Nemerle.Utility;

using System;
using Nemerle.Statechart;

  [statechart(<#

  flags testing auto_initial;
  //flags debug;
  
  name "join transition with completion event";
  
  state A
  {
    a => B;
  }
  
  region B
  {
    join j1 => A;
    
    state E
    {
      a => F;
    }
    
    state F
    {
      _ => j1;
    }
    
  } and
  {
    
    state D
    {
      a => C;
    }
    
    state C
    {
      _ => j1;
    }
    
  }
  
  #>)]
  public class example
  {
  }

  
 module Test
 {
   Main() : void
   {
    def fsm = example();
    def tester = fsm.GetTester();
    tester.ConsoleTestInit();
    tester.Initiate("A", "EntryA");
    tester.Test("a", "ED", ["A"], ["B", "E", "D"]);
    tester.Test("a", "A", "ExitE", "ExitD", "EntryF", "EntryC", "ExitC", "ExitF", "ExitB", "EntryA");
    fsm.Terminate();
   }
 }
 
/*
BEGIN-OUTPUT
EntryA
[A]
Ok
Processing a 'a' 
ExitA
EntryB
EntryE
EntryD
[ED]
Ok
Processing a 'a' 
ExitE
ExitD
EntryF
EntryC
ExitC
ExitF
ExitB
EntryA
[A]
Ok
END-OUTPUT
*/
 
