snippets/Nemerle.Statechart/Tests/testsuite/negative/join_source_is_states_only.n
using Nemerle;
using Nemerle.Collections;
using Nemerle.Text;
using Nemerle.Utility;

using System;
using Nemerle.Statechart;

  [statechart(<#

  flags testing auto_initial;
  //flags debug;
  
  name "join must have sources states only";
  
  state A
  {
    a => B;
  }

  region B
  {
    (j1, D): a => A; // E: Join must have source from states not other sources: \[Junctionj1AtB, D\]
    
    state C
    {
    }
    
    state E
    {
    }
    
    junction j1
    {
      a1 => A;
    }
  } and
  {
    
    state D
    {
    }
    
    state F
    {
    }
  }
  
  #>)]
  public class example
  {
  }
